--- a/arch/arm64/configs/nio_defconfig
+++ b/arch/arm64/configs/nio_defconfig
@@ -607,7 +607,9 @@ CONFIG_AF_NOISE_ELIMINATION=y
 #
 # General architecture-dependent options
 #
-# CONFIG_KPROBES is not set
+# KernelSU
+CONFIG_KPROBES=y
+CONFIG_KPROBE_EVENTS=y
 # CONFIG_JUMP_LABEL is not set
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
@@ -6309,3 +6311,4 @@ CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
 # CONFIG_CORESIGHT is not set
+CONFIG_KSU=y
